--- a/Player/Passengers/Bob.cfg
+++ b/Player/Passengers/Bob.cfg
@@ -1,20 +1,20 @@
 [Basics]
 
 name="Bob"
-imgpath="res://Player/Passengers/bob1.png"
+imgpath="res://Player/Passengers/bob%s.png"
 start_insanity=0
 
 [TooCloseSensibility]
 
-too_fast=30
+too_fast=10
 insanity_effect=10
-coll_size_mult=200
+coll_size_mult=3
 
 
 [TooFastSensibility]
 
-too_fast=50000
-insanity_effect=10
+too_fast=120
+insanity_effect=1
 
 
 [TooSlowSensibility]
