move passengers to their own folder

--- a/Passengers/Bob.cfg
+++ b/Passengers/Bob.cfg
@@ -1,7 +1,7 @@
 [Basics]
 
 name="Bob"
-imgpath="res://Passengers/bob/bob%s.png"
+imgpath="res://Player/Passengers/bob%s.png"
 start_insanity=0
 
 [TooCloseSensibility]
