should have been part of prev commit

--- a/Player/Passengers/Bob.cfg
+++ b/Player/Passengers/Bob.cfg
@@ -1,7 +1,7 @@
 [Basics]
 
 name="Bob"
-imgpath="res://Passengers/bob/bob%s.png"
+imgpath="res://Passengers/Bob/Bob_%s.png"
 start_insanity=0
 
 [TooCloseSensibility]
