--- a/Passengers/Bob/Bob.cfg
+++ b/Passengers/Bob/Bob.cfg
@@ -1,7 +1,7 @@
 [Basics]
 
 name="Bob"
-imgpath="res://Player/Passengers/bob%s.png"
+imgpath="res://passengers/bob/bob_%s.png"
 start_insanity=0
 
 [TooCloseSensibility]
