update config files to new info

--- a/src/passengers/juan/juan.cfg
+++ b/src/passengers/juan/juan.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Juan"
-imgpath="res://passengers/juan/juan_%s.png"
+ressource_path="res://passengers/juan/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="A Cuban who did it all, escape the country, sail across the world, and participate in countless bullfights. The colour red triggers his ptsd, stay away from Stop signs."
 
 [TooCloseSensibility]
