--- a/src/passengers/karen/karen.cfg
+++ b/src/passengers/karen/karen.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Karen"
-imgpath="res://passengers/karen/karen_%s.png"
+ressource_path="res://passengers/karen/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="She never left, nor had the desire to leave the safety of the suburbs. Triggered by almost anything except puddles since her grandfather used to jump in them with her."
 
 [TooCloseSensibility]
