--- a/src/passengers/lucy/lucy.cfg
+++ b/src/passengers/lucy/lucy.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Lucy"
-imgpath="res://passengers/lucy/lucy_%s.png"
+ressource_path="res://passengers/lucy/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="A student who fights injustice with her own rules and tools. Hates if you drive over bins, near trees or over the grass."
 
 [TooCloseSensibility]
