--- a/src/passengers/martha/martha.cfg
+++ b/src/passengers/martha/martha.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Martha"
-imgpath="res://passengers/martha/martha_%s.png"
+ressource_path="res://passengers/martha/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="Short fused, this old lady used to teach convicts. Rumours say she killed all three of her husbands. Hates bins since they remind her of her husbands."
 
 [TooCloseSensibility]
