--- a/src/passengers/ahote/ahote.cfg
+++ b/src/passengers/ahote/ahote.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Ahote"
-imgpath="res://passengers/ahote/ahote_%s.png"
+ressource_path="res://passengers/ahote/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="Native American, this young lad returns to his spiritual roots if triggered and driven into insanity. Hates corners and makes the car go faster."
 
 [TooCloseSensibility]
