--- a/src/passengers/bjorn/bjorn.cfg
+++ b/src/passengers/bjorn/bjorn.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Bjorn"
-imgpath="res://passengers/bjorn/bjorn_%s.png"
+ressource_path="res://passengers/bjorn/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="A disgrace to his Viking ancestors, this man got no chill. He came by plane and thinks the ocean is disgusting and not worth saving. Hates hydrants and puddles."
 
 [TooCloseSensibility]
