--- a/src/passengers/bob/bob.cfg
+++ b/src/passengers/bob/bob.cfg
@@ -1,15 +1,17 @@
 [Basics]
 
 name="Bob"
-imgpath="res://passengers/bob/bob_%s.png"
+ressource_path="res://passengers/bob/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="A jerk who panics fast, people say he played a lead role in some Wizard movie. After meeting Emma Watson, he decided, na that life aint for me."
 
 [TooCloseSensibility]
 
-too_fast=30
-insanity_effect=30
-coll_size_mult=6
+too_fast=15
+insanity_effect=50
+coll_size_mult=8
 
 
 [TooFastSensibility]
