--- a/src/passengers/hiroshi/hiroshi.cfg
+++ b/src/passengers/hiroshi/hiroshi.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Hiroshi"
-imgpath="res://passengers/hiroshi/hiroshi_%s.png"
+ressource_path="res://passengers/hiroshi/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="As a Japanese immigrant he never had it easy. Hiroshi prefers to walk and can get extremely mad if triggered. When fully triggered he uses his ancient monkey powers to emit a scent that drives everybody mad."
 
 [TooCloseSensibility]
