--- a/src/passengers/izaak/izaak.cfg
+++ b/src/passengers/izaak/izaak.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Izaak"
-imgpath="res://passengers/izaak/izaak_%s.png"
+ressource_path="res://passengers/izaak/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="This Korean war Vet was a truck driver and is used to abuse, has no problem at all with speed but gets batshit crazy if you drive over potholes, manhole covers and puddles, since mines could be hidden everywhere."
 
 [TooCloseSensibility]
