--- a/src/passengers/mike/mike.cfg
+++ b/src/passengers/mike/mike.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Mike"
-imgpath="res://passengers/mike/mike_%s.png"
+ressource_path="res://passengers/mike/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="In his youth mike used to be a successful boxer. After being convicted for rape he was never quite able to reintegrate into society, his presence makes female passengers uncomfortable."
 
 [TooCloseSensibility]
