--- a/src/passengers/xiu/xiu.cfg
+++ b/src/passengers/xiu/xiu.cfg
@@ -1,8 +1,10 @@
 [Basics]
 
 name="Xiu"
-imgpath="res://passengers/xiu/xiu_%s.png"
+ressource_path="res://passengers/xiu/"
 start_insanity=0
+rage_points=10
+rage_cooldown_sec=5
 lore="Born and raised locally, as the daughter of Chinese immigrants, unfortunately she is still treated as an outsider. But maybe the reason is not just her appearance, but the fact that she is a pain in the ass to be around? Hates Speed and sharp turns."
 
 [TooCloseSensibility]
