sensibilities changed back to working values, TIL: you can comment out stuff in cfg files

--- a/src/passengers/ressources/bob/bob.cfg
+++ b/src/passengers/ressources/bob/bob.cfg
@@ -9,21 +9,26 @@ lore="A jerk who panics fast, people say he played a lead role in some Wizard mo
 
 [TooCloseSensibility]
 
-too_fast=1500
-insanity_effect=30
-cooldown=2
+too_fast=40
+insanity_effect=20
+cooldown=5
 coll_size_mult=6
 
 
 [TooFastSensibility]
 
-too_fast=30
-insanity_effect=20
-cooldown=2
+too_fast=70
+insanity_effect=10
+cooldown=5
 
 
 [TooSlowSensibility]
 
-too_slow=-50000
-insanity_effect=30
+too_slow=15
+insanity_effect=3
 cooldown=2
+
+
+[DriftHater]
+
+insanity_effect=2
