add automatic effect

--- a/src/passengers/ressources/bob/bob.cfg
+++ b/src/passengers/ressources/bob/bob.cfg
@@ -15,20 +15,28 @@ cooldown=5
 coll_size_mult=6
 
 
-[TooFastSensibility]
+# [TooFastSensibility]
 
-too_fast=70
-insanity_effect=10
-cooldown=5
-
-
-[TooSlowSensibility]
-
-too_slow=15
-insanity_effect=3
-cooldown=2
+# too_fast=70
+# insanity_effect=10
+# cooldown=5
 
 
-[DriftHater]
+# [TooSlowSensibility]
 
-insanity_effect=2
+# too_slow=15
+# insanity_effect=3
+# cooldown=2
+
+
+# [DriftHater]
+
+# insanity_effect=2
+
+
+[AutomaticEffect]
+
+message = "Finally some relaxing!"
+is_broadcasting = false
+insanity_effect = -2
+cooldown = 1
