implement all gas no brakes

--- a/src/passengers/ressources/bob/bob.cfg
+++ b/src/passengers/ressources/bob/bob.cfg
@@ -15,11 +15,11 @@ cooldown=5
 coll_size_mult=6
 
 
-# [TooFastSensibility]
+[TooFastSensibility]
 
-# too_fast=70
-# insanity_effect=10
-# cooldown=5
+too_fast=70
+insanity_effect=10
+cooldown=5
 
 
 # [TooSlowSensibility]
@@ -29,9 +29,9 @@ coll_size_mult=6
 # cooldown=2
 
 
-# [DriftHater]
+[DriftHater]
 
-# insanity_effect=2
+insanity_effect=2
 
 
 [AutomaticEffect]
@@ -40,3 +40,9 @@ message = "Finally some relaxing!"
 is_broadcasting = false
 insanity_effect = -2
 cooldown = 1
+
+
+# [AllGasNoBrakes]
+
+# insanity_required=80
+
