--- a/src/passengers/ressources/bob/bob.cfg
+++ b/src/passengers/ressources/bob/bob.cfg
@@ -1,48 +1,17 @@
 [Basics]
-
 name="Bob"
 ressource_path="res://passengers/ressources/bob/"
 start_insanity=0
 rage_points=10
 rage_cooldown_sec=5
-lore="A jerk who panics fast, people say he played a lead role in some Wizard movie. After meeting Emma Watson, he decided, na that life aint for me."
+lore="A jerk who panics fast, people say he played a lead role in some Wizard movie. After meeting Emma Watson, he decided: 'nah that life aint for me'."
 
-[TooCloseSensibility]
-
-too_fast=40
-insanity_effect=20
-cooldown=5
-coll_size_mult=6
-
-
-[TooFastSensibility]
-
-too_fast=70
-insanity_effect=10
-cooldown=5
-
-
-# [TooSlowSensibility]
-
-# too_slow=15
+# [TooFastSensibility]
+# too_fast=65
 # insanity_effect=3
-# cooldown=2
 
+[TooSlowSensibility]
+too_slow=15
+insanity_effect=4
 
-[DriftHater]
-
-insanity_effect=2
-
-
-[AutomaticEffect]
-
-message = "Finally some relaxing!"
-is_broadcasting = false
-insanity_effect = -2
-cooldown = 1
-
-
-# [AllGasNoBrakes]
-
-# insanity_required=80
-
+#TODO: write about speed in descr.?
