Izaak is now karl

--- a/src/passengers/ressources/karl/karl.cfg
+++ b/src/passengers/ressources/karl/karl.cfg
@@ -1,7 +1,7 @@
 [Basics]
 
-name="Izaak"
-ressource_path="res://passengers/ressources/izaak/"
+name="Karl"
+ressource_path="res://passengers/ressources/karl/"
 start_insanity=0
 rage_points=10
 rage_cooldown_sec=5
