karen is character 2

--- a/src/passengers/ressources/karen/karen.cfg
+++ b/src/passengers/ressources/karen/karen.cfg
@@ -1,15 +1,13 @@
 [Basics]
-
 name="Karen"
 ressource_path="res://passengers/ressources/karen/"
 start_insanity=0
-rage_points=10
+rage_points=2
 rage_cooldown_sec=5
-lore="She never left, nor had the desire to leave the safety of the suburbs. Triggered by almost anything except puddles since her grandfather used to jump in them with her."
+lore="She never left, nor had the desire to leave the safety of the suburbs. She will definitely speak to the manager if you drive too close to other objects!"
 
 [TooCloseSensibility]
-
 too_fast=30
-insanity_effect=30
+insanity_effect=20
 cooldown=2
 coll_size_mult=6
