--- a/src/passengers/ressources/merlin/merlin.cfg
+++ b/src/passengers/ressources/merlin/merlin.cfg
@@ -4,4 +4,4 @@ ressource_path="res://passengers/ressources/merlin/"
 start_insanity=0
 rage_points=2
 rage_cooldown_sec=5
-lore="Born and raised in the magic kingdom of Great Briton, this man suddenly found himself in a different universe, where traffic rules don’t apply."
+lore="Born and raised in the magic kingdom, this man suddenly found himself in a different universe, where traffic rules don’t apply."
