start working on export presets

--- a/src/passengers/ressources/hugh/hugh.cfg
+++ b/src/passengers/ressources/hugh/hugh.cfg
@@ -2,6 +2,10 @@
 name="Hugh"
 ressource_path="res://passengers/ressources/hugh/"
 start_insanity=0
-rage_points=2
+rage_points=1
 rage_cooldown_sec=5
-lore=""
+lore="He may just be a kid, but he's got places to go. FAST. He'll go mad quickly if you don't take him there ASAP!"
+
+[TooSlowSensibility]
+too_slow=40
+insanity_effect=3
