--- a/src/passengers/ressources/lucy/lucy.cfg
+++ b/src/passengers/ressources/lucy/lucy.cfg
@@ -1,15 +1,11 @@
 [Basics]
-
 name="Lucy"
 ressource_path="res://passengers/ressources/lucy/"
 start_insanity=0
-rage_points=10
+rage_points=1
 rage_cooldown_sec=5
-lore="A student who fights injustice with her own rules and tools. Hates if you drive over bins, near trees or over the grass."
+lore="Lucy has places to be, she would sure appreciate it if you drive a bit faster. Or don't - if you want to drive her to INSANITY ;)"
 
-[TooCloseSensibility]
-
-too_fast=30
-insanity_effect=30
-cooldown=2
-coll_size_mult=6
+[TooSlowSensibility]
+too_slow=20
+insanity_effect=2
