--- a/src/passengers/ressources/marvin/marvin.cfg
+++ b/src/passengers/ressources/marvin/marvin.cfg
@@ -2,6 +2,19 @@
 name="Marvin"
 ressource_path="res://passengers/ressources/marvin/"
 start_insanity=0
-rage_points=2
+rage_points=5
 rage_cooldown_sec=5
-lore=""
+lore="The only one who enjoys all this mayhem. Will earn you a lot of points when driven to insanity. Watch out however, once he reaches 75% insanity there's no stopping the car!"
+
+[TooCloseSensibility]
+too_fast=40
+insanity_effect=20
+cooldown=2
+coll_size_mult=6
+
+[TooFastSensibility]
+too_fast=60
+insanity_effect=2
+
+[AllGasNoBrakes]
+insanity_required=75
