changes to passengers, start adding own tilemap

--- a/src/passengers/ressources/martha/martha.cfg
+++ b/src/passengers/ressources/martha/martha.cfg
@@ -1,15 +1,10 @@
 [Basics]
-
 name="Martha"
 ressource_path="res://passengers/ressources/martha/"
 start_insanity=0
-rage_points=10
-rage_cooldown_sec=5
-lore="Short fused, this old lady used to teach convicts. Rumours say she killed all three of her husbands. Hates bins since they remind her of her husbands."
+rage_points=6
+rage_cooldown_sec=3
+lore="Short fused, this old lady really gets going when you drive her insane. Hates the sound of screetching tires because they remind her of her grandkids. Smokes 5 packs of cigarettes a day which (might) explain her voice."
 
-[TooCloseSensibility]
-
-too_fast=30
-insanity_effect=30
-cooldown=2
-coll_size_mult=6
+[DriftHater]
+insanity_effect=2
