--- a/src/passengers/ressources/karli/karli.cfg
+++ b/src/passengers/ressources/karli/karli.cfg
@@ -1,11 +1,14 @@
 [Basics]
-name="Hugh"
-ressource_path="res://passengers/ressources/hugh/"
+name="Karli"
+ressource_path="res://passengers/ressources/karli/"
 start_insanity=0
 rage_points=1
 rage_cooldown_sec=5
-lore="He may just be a kid, but he's got places to go. FAST. He'll go mad quickly if you don't take him there ASAP!"
+lore="This annoying viennese kid has a talent for driving fellow passengers insane with his remarks. Once he reaches full insanity, his scream is enough to aggravate everyone in the car. To get him there, you have to drive fast though... really fast..."
 
-[TooSlowSensibility]
-too_slow=20
-insanity_effect=2
+[InsanityScream]
+insanity_effect=50
+
+[TooFastSensibility]
+too_fast=65
+insanity_effect=3
