remove some questionable texts

--- a/src/passengers/ressources/ahote/ahote.cfg
+++ b/src/passengers/ressources/ahote/ahote.cfg
@@ -5,7 +5,7 @@ ressource_path="res://passengers/ressources/ahote/"
 start_insanity=0
 rage_points=10
 rage_cooldown_sec=5
-lore="Native American, this young lad returns to his spiritual roots if triggered and driven into insanity. Hates corners and makes the car go faster."
+lore=""
 
 [TooCloseSensibility]
 
