--- a/src/passengers/ressources/mike/mike.cfg
+++ b/src/passengers/ressources/mike/mike.cfg
@@ -5,7 +5,7 @@ ressource_path="res://passengers/ressources/mike/"
 start_insanity=0
 rage_points=10
 rage_cooldown_sec=5
-lore="In his youth mike used to be a successful boxer. After being convicted for rape he was never quite able to reintegrate into society, his presence makes female passengers uncomfortable."
+lore=""
 
 [TooCloseSensibility]
 
