--- a/src/passengers/ressources/merlin/merlin.cfg
+++ b/src/passengers/ressources/merlin/merlin.cfg
@@ -2,6 +2,18 @@
 name="Merlin"
 ressource_path="res://passengers/ressources/merlin/"
 start_insanity=0
-rage_points=2
+rage_points=6
 rage_cooldown_sec=5
-lore="Born and raised in the magic kingdom, this man suddenly found himself in a different universe, where traffic rules don’t apply."
+lore="Born and raised in the magic kingdom, this man suddenly found himself in a different universe, where traffic rules don’t apply. Will earn you an INSANE amount of points if you drive too close to other objects. However, his magic aura calms down other passengers a bit..."
+
+[AutomaticEffect]
+message = "Finally some relaxing!"
+is_broadcasting = true
+insanity_effect = -2
+cooldown = 1
+
+[TooCloseSensibility]
+too_fast=40
+insanity_effect=30
+cooldown=2
+coll_size_mult=6
