--- a/src/passengers/ressources/juan/juan.cfg
+++ b/src/passengers/ressources/juan/juan.cfg
@@ -2,12 +2,10 @@
 name="Juan"
 ressource_path="res://passengers/ressources/juan/"
 start_insanity=0
-rage_points=10
+rage_points=2
 rage_cooldown_sec=5
 lore="A Cuban who did it all, escape the country, sail across the world, and participate in countless bullfights. The color red triggers his PTSD, so stay away from stop signs if you want to keep him calm."
 
-[TooCloseSensibility]
-too_fast=30
-insanity_effect=30
-cooldown=2
-coll_size_mult=6
+[HatesRed]
+insanity_effect=20
+cooldown=1
